tests/agl/rejections/scope/def_not_root.agl
if true =>
  def nested(x: int) -> int = x
  nested(1)
